k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: musician-app
  labels:
    app: musician-app
spec:
  selector:
    app: musician-app
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: http
